--- a/SpringBootRestAPITravelManagementSystem/src/main/resources/application.properties
+++ b/SpringBootRestAPITravelManagementSystem/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-server.port=1000
+server.port=2000
 #DataBase Related Properties:
-spring.datasource.url=jdbc:mysql://localhost:3306/travels
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Bhargav@4426
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url= jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=travel_management_system
+spring.datasource.password=travel_management_system
 
 #JPA Properties/HB related Properties:
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+
+spring.profiles.active=dev
 
